--- a/Tangerine/Tangerine.html
+++ b/Tangerine/Tangerine.html
@@ -3,9 +3,9 @@
 <html>
 <body>
     <p id="request"></p>
-    <button onclick="response(1)">1</button>
-    <button onclick="response(2)">2</button>
-    <button onclick="response(3)">3</button>
+    
+
+    <button onclick="response(0)">Ͷ!</button>
     <script>
         state = 1;
 
